# electric-vehicle-controller

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE  config.h  main.cpp
.circleci/: config.yml
control/: BUILD  CMakeLists.txt  current_regulator.cc  current_regulator.h  current_regulator_test.cc  current_regulator_test.cpp  modulation.cc  modulation.cpp  modulation.h  modulation_commands.cpp  modulation_commands.h  modulation_commands_test.cpp  modulation_test.cc  modulation_test.cpp  stator_angle_estimator.cpp  stator_angle_estimator.h  stator_angle_estimator_test.cc  stator_angle_estimator_test.cpp  timer.cc  timer.cpp  timer.h  timer_test.cc  timer_test.cpp
induction_motor_controls/: BUILD  CMakeLists.txt  induction_motor_controller.cc  induction_motor_controller.cpp  induction_motor_controller.h  induction_motor_controller_test.cc  induction_motor_controller_test.cpp
machines/: BUILD  CMakeLists.txt  induction_machine.cpp  induction_machine.h  induction_machine_test.cpp
measurement/: BUILD  CMakeLists.txt  dc_voltage.cpp  dc_voltage.h  dc_voltage_test.cc  dc_voltage_test.cpp  mechanical_speed.cpp  mechanical_speed.h  mechanical_speed_test.cc  mechanical_speed_test.cpp  three_phase_currents.cpp  three_phase_currents.h  three_phase_currents_test.cc  three_phase_currents_test.cpp  throttle.cc  throttle.cpp  throttle.h  throttle_test.cc  throttle_test.cpp
nbproject/: configurations.xml  project.xml
signal_processing/: BUILD  CMakeLists.txt  angle_math.cc  angle_math.h  angle_math_test.cc  angle_math_test.cpp  clarke_transformations.cc  clarke_transformations.cpp  clarke_transformations.h  clarke_transformations_test.cc  clarke_transformations_test.cpp  first_order_lag.cc  first_order_lag.cpp  first_order_lag.h  first_order_lag_test.cc  first_order_lag_test.cpp  integrator.cc  integrator.cpp  integrator.h  integrator_test.cc  integrator_test.cpp  math_constants.h  pi.cc  pi.cpp  pi.h  pi_test.cc  pi_test.cpp  three_phase_dq_filtered.h  three_phase_dq_filtered_test.cpp  two_dimensional_first_order_lag.h  two_dimensional_first_order_lag_test.cpp
spice/: current_regulator.asc  current_regulator.asy  inverse_park_transformation.asc  inverse_park_transformation.asy  inverter_simulation.asc  inverter_simulation.net  park_transformation.asc  park_transformation.asy  pi.asc  pi.sym  pic32_dc_voltage_sampler.asc  pic32_dc_voltage_sampler.asy  pic32_three_phase_current_sampler.asc  pic32_three_phase_current_sampler.asy  pic32_throttle_sampler.asc  pic32_throttle_sampler.asy  stator_angle_estimator.asc  stator_angle_estimator.asy  torque_controller.asc  torque_controller.asy  two_level_sine_modulator.asc  two_level_sine_modulator.asy  xy_amplitude.asc  xy_amplitude.asy  xy_limit.asc  xy_limit.asy  xy_scale.asc  xy_scale.asy
